# ThreatLogModel

./: .gitignore  Dockerfile  Dockerfile_mlflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-image.yml
dev/: docker-compose.yml
mlruns/0/: meta.yaml
mlruns/205624682839732858/: meta.yaml
mlruns/205624682839732858/adc092868ae54cd888eb91829783de79/: meta.yaml
mlruns/205624682839732858/adc092868ae54cd888eb91829783de79/artifacts/modelo_pipeline/: MLmodel  conda.yaml  model.pkl
mlruns/205624682839732858/adc092868ae54cd888eb91829783de79/metrics/: accuracy  precision_weighted
mlruns/205624682839732858/adc092868ae54cd888eb91829783de79/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
nginx/: .htpasswd  nginx.conf
src/tl_model_server/: __main__.py
src/tl_model_server/agents/: kafka_agent.py  model_agent.py
src/tl_model_server/data/model_v1/: pipeline.joblib
src/tl_model_server/kafka/: config.py  consumer.py  producer.py
src/tl_model_server/kafka_utils/: config.py  consumer.py  producer.py
src/tl_model_server/models/: __init__.py  message_types.py  model_agent.py  pipeline.joblib  train_logs.csv  types.py
src/tl_model_server/models/model_v1/: model.py
